[package]
name = "woplanner"
version = "0.1.0"
edition = "2024"
authors = ["David Dähne"]

[dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "chrono", "uuid", "migrate"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
